@@ -8,4 +8,3 @@
 include $(top_srcdir)/build-aux/init.mk
 include $(top_srcdir)/libport/libport.mk
 SUBDIRS = tests
-
